# upscaler

./: .dockerignore  .gitignore  .prettierrc  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  release.sh  test_api.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docker.yml
assets/logo/: README.md
scripts/: README.md  generate_logo_assets.py
src/upscaler/: __init__.py  __main__.py  app.py  cli.py  upscaler.py  utils.py
src/upscaler/static/: site.webmanifest
src/upscaler/static/css/: style.css
src/upscaler/static/js/: app.js
src/upscaler/templates/: index.html
tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_upscaler.py  test_utils.py
