[project]
name = "upscaler"
version = "0.1.0"
description = "AI-powered image upscaler using Real-ESRGAN with web API"
requires-python = ">=3.12"
dependencies = [
    "basicsr>=1.4.2",
    "fastapi>=0.121.1",
    "numpy>=2.3.4",
    "pillow>=12.0.0",
    "python-multipart>=0.0.20",
    "realesrgan>=0.3.0",
    "uvicorn[standard]>=0.38.0",
]
